--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </nav>
             <div class="image">
               <a href="https://www.ynov.com/campus/lille">
-                <img src="../assets/images/logoynov.jpg" alt="" />
+                <img src="assets/images/logoynov.jpg" alt="" />
               </a>
             </div>
             
