--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </p>
             </div>
             <div class="white-button">
-              <a href="page/presentation.php">En savoir plus sur moi</a>
+              <a href="page/presentation.html">En savoir plus sur moi</a>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
                     Ce projet incluait également la création d’un dossier complet comprenant nos ressources, notre planning et une étude de marché.
                   </p>
                   <div class="white-button">
-                    <a href="page/stage.php">En savoir plus sur le deroulement de mon stage</a>
+                    <a href="page/stage.html">En savoir plus sur le deroulement de mon stage</a>
                   </div>
                 </div>
               </div>
