--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             
             <div class="copyright-text">
-                <p>Ynov Campus Lille - Ecole des métiers du digital</p>
+                <p>Lille Ynov Campus</p>
               </div>
           </div>
         </div>
